--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 
     <link rel="stylesheet" href="app.css" />
-    <title</title>
+    <title></title>
     
 </head>
 
